--- a/cmd/fireplace-viewer/app/index.html
+++ b/cmd/fireplace-viewer/app/index.html
@@ -9,8 +9,8 @@
 		<title>Tee Time</title>
 		<link rel="stylesheet" type="text/css" href="/static/js/libraries/nerdwebjs/admin.min.css" />
 		<link rel="stylesheet" type="text/css" href="/static/js/libraries/nerdwebjs/shim.min.css" />
-
 		<link rel="stylesheet" type="text/css" href="/static/css/styles.css" />
+		<link rel="manifest" href="/manifest.json" />
 	</head>
 
 	<body>
