Got favicon put in

--- a/cmd/fireplace-viewer/app/index.html
+++ b/cmd/fireplace-viewer/app/index.html
@@ -4,12 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="A tool for viewing logs from a Fireplace server"/>
+		<meta name="description" content="A tool for viewing logs from a Fireplace server" />
 
 		<title>Tee Time</title>
 		<link rel="stylesheet" type="text/css" href="/static/js/libraries/nerdwebjs/admin.min.css" />
 		<link rel="stylesheet" type="text/css" href="/static/js/libraries/nerdwebjs/shim.min.css" />
 		<link rel="stylesheet" type="text/css" href="/static/css/styles.css" />
+		<link rel="icon" type="image/png" href="/static/images/fire-pit-96x96.png" />
 		<link rel="manifest" href="/manifest.json" />
 	</head>
 
