--- a/cmd/fireplacelogging/app/index.html
+++ b/cmd/fireplacelogging/app/index.html
@@ -6,22 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fireplace</title>
   <link rel="stylesheet" href="/static/css/styles.css" />
+  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 </head>
 
 <body>
   <header>
     <div class="header-left">
-      <img src="/static/images/header-dots.png" alt="image of dots" />
+      <a href="/"><img src="/static/images/header-dots.png" alt="image of dots" /></a>
       <h1>Fireplace</h1>
     </div>
 
     <div class="header-right">
       <nav>
         <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#getfireplace">Get Fireplace</a></li>
-          <li><a href="#">View Logs</a></li>
-          <li><a href="#">Manage Servers</a></li>
+          <li><a href="/#about">About</a></li>
+          <li><a href="/#getfireplace">Get Fireplace</a></li>
+          <li><a href="/view-logs">View Logs</a></li>
+          <li><a href="/manage-servers">Manage Servers</a></li>
         </ul>
       </nav>
     </div>
