Using suneditor for HTML WYSIWYG editing

--- a/cmd/fireplacelogging/app/index.html
+++ b/cmd/fireplacelogging/app/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fireplace</title>
   <link rel="stylesheet" href="/static/css/styles.css" />
+  <link rel="stylesheet" href="/static/js/libraries/suneditor/suneditor.min.css" />
+
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 </head>
 
@@ -46,6 +48,7 @@
     </section>
   </footer>
 
+  <script src="/static/js/libraries/suneditor/suneditor.min.js"></script>
   <script type="module" src="/main.js"></script>
 </body>
 
