--- a/cmd/fireplacelogging/app/index.html
+++ b/cmd/fireplacelogging/app/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/static/js/libraries/suneditor/suneditor.min.css" />
 
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 </head>
 
 <body>
