Using quill instead of suneditor

--- a/cmd/fireplacelogging/app/index.html
+++ b/cmd/fireplacelogging/app/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fireplace</title>
   <link rel="stylesheet" href="/static/css/styles.css" />
-  <link rel="stylesheet" href="/static/js/libraries/suneditor/suneditor.min.css" />
+  <link rel="stylesheet" href="/static/js/libraries/quill/quill.snow.css" />
 
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
@@ -49,7 +49,7 @@
     </section>
   </footer>
 
-  <script src="/static/js/libraries/suneditor/suneditor.min.js"></script>
+  <script src="/static/js/libraries/quill/quill.min.js"></script>
   <script type="module" src="/main.js"></script>
 </body>
 
