--- a/cmd/fireplacelogging/app/index.html
+++ b/cmd/fireplacelogging/app/index.html
@@ -22,6 +22,7 @@
     <div class="header-right">
       <nav>
         <ul>
+          <li><a href="/">Home</a></li>
           <li><a href="/#about">About</a></li>
           <li><a href="/#getfireplace">Get Fireplace</a></li>
           <li><a href="/view-logs">View Logs</a></li>
